--- a/alphaboxd_api/package.json
+++ b/alphaboxd_api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alphaboxd_api",
+  "name": "aula10-09",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -13,9 +13,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.1",
+    "express": "^4.20.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.11.4",
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.4",
     "sequelize": "^6.37.5"
   }
 }
